# Putnam-Bench-tests

./: LICENSE  agents.yaml  eval.py  eval.sh  tasks.yaml
lean4/.lake/: lakefile.olean  lakefile.olean.trace
lean4_formalizer/: README.md  lean_log.txt  lean_test.lean  pyproject.toml  report.md
lean4_formalizer/src/lean4_formalizer/: crew.py  main.py
lean4_formalizer/src/lean4_formalizer/config/: agents.yaml  tasks.yaml
test_space/: README.md  TestSpace.lean  lake-manifest.json  lakefile.toml  lean_test.lean
